force-app/main/default/objects/mensagem__c/mensagem__c.object-meta.xml
<CustomObject>
    <label>Mensagem</label>
    <nameField>
        <label>Nome de mnesagem</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mensagens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>