force-app/main/default/objects/mensagem__c/fields/Conversa__c.field-meta.xml
<CustomField>
    <fullName>Conversa__c</fullName>
    <label>Conversa</label>
    <referenceTo>Conversa__c</referenceTo>
    <relationshipLabel>Mensagens</relationshipLabel>
    <relationshipName>Mensagens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>