force-app/main/default/objects/mensagem__c/fields/Documento_Chat_Licita_o__c.field-meta.xml
<CustomField>
    <fullName>Documento_Chat_Licita_o__c</fullName>
    <label>Documento (Chat Licitação)</label>
    <referenceTo>Documento__c</referenceTo>
    <relationshipLabel>Mensagens</relationshipLabel>
    <relationshipName>Mensagens</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>